--- a/afs/templates/views/components/workflows/create-project-workflow/add-things-step.htm
+++ b/afs/templates/views/components/workflows/create-project-workflow/add-things-step.htm
@@ -56,7 +56,7 @@
                         <div class="wf-multi-tile-card-info-details">
                         <dt data-bind="text: $data.displayname"></dt>
                         <dd>
-                            <a target="_blank" href="" data-bind="text: $data.displaydescription"></a>
+                            <a data-bind="text: $data.displaydescription"></a>
                         </dd>
                         </div>
                     </div>
