--- a/afs/templates/views/components/workflows/create-project-workflow/add-things-step.htm
+++ b/afs/templates/views/components/workflows/create-project-workflow/add-things-step.htm
@@ -17,7 +17,8 @@
                                 name: 'resource-report-abstract',
                                 params: {
                                     report: $data.report,
-                                    summary: true
+                                    summary: true,
+                                    disableDisambiguatedReport: true
                                 }
                             }, css: {'selected-instance': $parent.value().map(function(r){return r.resourceId}).indexOf($data['_source']['resourceinstanceid']) >= 0},
                             click: function(){$parent.updateTileData($data['_source']['resourceinstanceid'])}">
