--- a/afs/templates/views/components/workflows/upload-dataset/upload-dataset-final-step.htm
+++ b/afs/templates/views/components/workflows/upload-dataset/upload-dataset-final-step.htm
@@ -53,37 +53,38 @@
     </div>
 
     <div class="afs-final-step-section" style="padding: 15px; display: flex; flex-direction: column">
-        <!-- ko foreach: parentPhysThingAnnotations -->
-        <h5 class="summary-value" data-bind="text: name"></h5>
+        <!-- ko foreach: fileLists -->
+        <h5 class="summary-value" data-bind="text: digitalResourceName"></h5>
         <div style="display: inline-flex;">
-            <div style="border: solid 1px #ddd">
+            <!--div style="border: solid 1px #ddd">
                 <div class="iiif-leaflet" data-bind="leaflet: leafletConfig" style="height: 300px; width: 400px"></div>
+            </div-->
+            <div style="width: 1000px; padding-left: 30px;">
+                <table data-bind="datatable: tableConfig" class="table table-striped table-bordered" width="100%">
+                    <thead>
+                        <tr>
+                            <th>{% trans "File Name:" %}</th>
+                            <th>{% trans "Interpretation" %}</th>
+                            <th>{% trans "File Parameters" %}</th>
+                        </tr>
+                    </thead>
+                    <tbody data-bind="foreach: {data: fileList, as: 'file'}">
+                        <tr>
+                            <td><div class="summary-value" data-bind="text: file.name"></div></td>
+                            <td><div class="summary-value" data-bind="text: file.interpretation"></div></td>
+                            <td><div class="summary-value" data-bind="text: file.parameter"></div></td>
+                        </tr>
+                    <tbody>
+                </table>
+                <div class="final-step-section-block-item">
+                    <div style="display: inline-flex;">
+                        <div class="summary-label">{% trans 'Files: ' %}</div>
+                        <div class="summary-value" data-bind="text: fileList().length + '{% trans " files uploaded" %}'"></div>
+                    </div>
+                </div>
             </div>
         </div>
         <!-- /ko -->
-        <div>
-            <div class="file-list" style="display: flex; flex-direction: column;">
-                <div class="file-upload-card" style="display: inline-flex; justify-content: space-between;">
-                    <div class="summary-label">File Name:</div>
-                    <div class="summary-label">Interpretation</div>
-                    <div class="summary-label">File Parameters</div>
-                </div>
-                <!-- ko foreach: fileList -->
-                <div class="file-upload-card" style="display: inline-flex; justify-content: space-between;" 
-                    data-bind="style: {'border-width': $index() === ($parent.fileList().length - 1) ? '0px' : '1px'}">
-                    <div class="summary-value" data-bind="text: name"></div>
-                    <div class="summary-value" data-bind="text: size"></div>
-                    <div class="summary-value" data-bind="text: url"></div>
-                </div>
-                <!-- /ko -->
-            </div>
-            <div class="final-step-section-block-item">
-                <div class="block-item files-metadata">
-                    <span class="summary-label">{% trans 'Files: ' %}</span>
-                    <span class="summary-value" data-bind='text: fileList().length + "{% trans ' files uploaded' %}"'></span>
-                </div>
-            </div>
-        </div>
     </div>
 </div>
 <!-- /ko -->
