Minor fix for review-dataset-final-step, #387

--- a/afs/templates/views/components/workflows/review-dataset/review-dataset-final-step.htm
+++ b/afs/templates/views/components/workflows/review-dataset/review-dataset-final-step.htm
@@ -24,7 +24,7 @@
                 </div>
                 <div style="display: inline-flex;">
                     <div class="summary-label" data-bind="text: 'Sampled Object' + ':'"></div>
-                    <div class="summary-value" data-bind="text: 'This will probably be removed!!!'"></div>
+                    <div class="summary-value" data-bind="text: ''"></div>
                 </div>
             </div>
         </div>
