define resourceid and comment out annotation component

--- a/afs/templates/views/components/workflows/sample-taking-workflow/sample-taking-final-step.htm
+++ b/afs/templates/views/components/workflows/sample-taking-workflow/sample-taking-final-step.htm
@@ -54,9 +54,9 @@
     <div class="afs-final-step-section" style="padding: 15px; display: flex; flex-direction: column">
         <h5 class="summary-value">{% trans 'Sampling Activity' %}</h5>
         <div style="display: inline-flex;">
-            <div style="border: solid 1px #ddd">
+            <!-- <div style="border: solid 1px #ddd">
                 <div class="iiif-leaflet" data-bind="leaflet: leafletConfig" style="height: 300px; width: 400px"></div>
-            </div>
+            </div> -->
             <div>
                 <div class="file-list" style="display: flex; flex-direction: column;">
                     <div class="file-upload-card" style="display: inline-flex; justify-content: space-between;">
