Update upload-dataset-final-step, #462

--- a/afs/templates/views/components/workflows/upload-dataset/upload-dataset-final-step.htm
+++ b/afs/templates/views/components/workflows/upload-dataset/upload-dataset-final-step.htm
@@ -7,7 +7,7 @@
             <div style="display: flex; flex-direction: column;">
                 <a data-bind="attr: { href: urls.resource + '/' + resourceid}" target="_blank">
                     <div class="summary-value" 
-                        data-bind = "text: displayName + ' ({% trans 'Observation Resource Instance' %})'">
+                        data-bind = "text: reportVals.observationName.value + ' ({% trans 'Observation Resource Instance' %})'">
                     </div>
                 </a>
             </div>
