--- a/afs/templates/views/components/workflows/sample-taking-workflow/sample-taking-final-step.htm
+++ b/afs/templates/views/components/workflows/sample-taking-workflow/sample-taking-final-step.htm
@@ -53,31 +53,37 @@
     </div>
     <div class="afs-final-step-section" style="padding: 15px; display: flex; flex-direction: column">
         <h5 class="summary-value">{% trans 'Sampling Activity' %}</h5>
+        <!-- ko foreach: sampleAnnotations -->
         <div style="display: inline-flex;">
             <div style="border: solid 1px #ddd">
                 <div class="iiif-leaflet" data-bind="leaflet: leafletConfig" style="height: 300px; width: 400px"></div>
             </div>
-            <div>
-                <div class="file-list" style="display: flex; flex-direction: column;">
-                    <div class="file-upload-card" style="display: inline-flex; justify-content: space-between;">
-                        <div class="summary-label">Observation Name</div>
-                        <div class="summary-label">Description</div>
-                        <!--div class="summary-label">Sampling Motivation</div-->
-                    </div>
-                    <!-- ko foreach: reportVals.samplingUnits -->
-                    <div class="file-upload-card" style="display: inline-flex; justify-content: space-between;" 
-                        data-bind="style: {'border-width': $index() === ($parent.reportVals.samplingUnits.length - 1) ? '0px' : '1px'}">
-                        <div class="summary-value" data-bind="text: obsName.value"></div>
-                        <div class="summary-value" data-bind="text: samplingArea.value"></div>
-                    </div>
-                    <!-- /ko -->
-                </div>
-                <div style="display: inline-flex; padding: 15px;">
-                    <div class="summary-label">{% trans 'Sampled locations: ' %}</div>
-                    <div class="summary-value" data-bind='text: reportVals.samplingUnits.length'></div>
+            <div style="width: 100%; padding-left: 30px;">
+                <table data-bind="datatable: tableConfig" class="table table-striped table-bordered" width="100%">
+                    <thead>
+                        <tr>
+                            <th>{% trans "Observation Name:" %}</th>
+                            <th>{% trans "Description" %}</th>
+                            <th>{% trans "Sampling Motivation" %}</th>
+                        </tr>
+                    </thead>
+                    <tbody data-bind="foreach: {data: samplingLocations, as: 'loc'}">
+                        <tr>
+                            <td><div class="summary-value" data-bind="text: loc.samplingLocationName"></div></td>
+                            <td><div class="summary-value" data-bind="text: loc.sampleDescription"></div></td>
+                            <td><div class="summary-value" data-bind="text: loc.sampleMotivation"></div></td>
+                        </tr>
+                    <tbody>
+                </table>
+                <div class="final-step-section-block-item">
+                    <div style="display: inline-flex;">
+                        <div class="summary-label">{% trans 'Sampled locations: ' %}</div>
+                        <div class="summary-value" data-bind='text: samplingLocations.length'></div>
+                        </div>
                 </div>
             </div>
         </div>
+        <!-- /ko -->
     </div>
 </div>
 <!-- /ko -->
