--- a/afs/templates/views/components/workflows/analysis-areas-workflow/analysis-areas-final-step.htm
+++ b/afs/templates/views/components/workflows/analysis-areas-workflow/analysis-areas-final-step.htm
@@ -2,7 +2,7 @@
 <!-- ko if: loading() === false -->
 <div class="final-step">
     <div class="afs-final-step-section" style="padding: 15px; display: flex; flex-direction: column">
-        <h5 class="summary-value">{% trans 'Related Project/Object' %}</h5>
+        <h5 class="summary-value">{% trans 'Related Object' %}</h5>
         <div style="display: inline-flex; width: inherit; justify-content: space-between;">
             <div style="display: flex; flex-direction: column;">
                 <a data-bind="attr: { href: urls.resource + '/' + resourceid}" target="_blank">
@@ -12,6 +12,18 @@
                 </a>
             </div>
         </div>
+        <h5 class="summary-value">{% trans 'Regions' %}</h5>
+        <!-- ko foreach: regionInstances -->
+        <div style="display: inline-flex; width: inherit; justify-content: space-between;">
+            <div style="display: flex; flex-direction: column;">
+                <a data-bind="attr: { href: $root.urls.resource + '/' + regionResource}" target="_blank">
+                    <div class="summary-value" 
+                        data-bind = "text: regionName">
+                    </div>
+                </a>
+            </div>
+        </div>
+        <!-- /ko -->
     </div>
     <div class="afs-final-step-section" style="padding: 15px; display: flex; flex-direction: column">
         <h5 class="summary-value">{% trans 'Region of Interest' %}</h5>
