Fix spelling of discrete

--- a/afs/templates/views/components/workflows/upload-dataset/dataset-step.htm
+++ b/afs/templates/views/components/workflows/upload-dataset/dataset-step.htm
@@ -31,7 +31,7 @@
             data-bind="cursor: $data.locked() ? 'default' : 'pointer';"
         >
             <h5>
-                {% trans "Data from a discreet area/region of interest" %}
+                {% trans "Data from a discrete area/region of interest" %}
             </h5>
             <p>
                 {% trans "Choose this dataset type for any data resulting from a non-invasive technique and/or a minimally-invasive/minimally-destructive technique performed on a larger object but which does not consume the entire object/sample. This includes datasets from non-invasive techniques performed on remote samples." %}
