--- a/afs/templates/views/components/workflows/review-dataset/review-dataset-final-step.htm
+++ b/afs/templates/views/components/workflows/review-dataset/review-dataset-final-step.htm
@@ -30,35 +30,40 @@
         </div>
     </div>
 
-    <!-- ko foreach: {data:fileLists, as: 'fileList'} -->
     <div class="afs-final-step-section" style="padding: 15px; display: flex; flex-direction: column">
         <h5 class="summary-value">{% trans 'Dataset Name and Associated Files' %}</h5>
-        <h5 class="summary-value" data-bind="text: digitalResourceName"></h5>
-        <div>
-            <table data-bind="datatable: tableConfig" class="table table-striped table-bordered" width="100%">
-                <thead>
-                    <tr>
-                        <th>{% trans "File Name:" %}</th>
-                        <th>{% trans "Interpretation" %}</th>
-                        <th>{% trans "File Parameters" %}</th>
-                    </tr>
-                </thead>
-                <tbody data-bind="foreach: {data: fileList, as: 'file'}">
-                    <tr>
-                        <td><div class="summary-value" data-bind="text: file.name"></div></td>
-                        <td><div class="summary-value" data-bind="text: file.interpretation"></div></td>
-                        <td><div class="summary-value" data-bind="text: file.parameter"></div></td>
-                    </tr>
-                <tbody>
-            </table>
-            <div class="final-step-section-block-item">
-                <div style="display: inline-flex;">
-                    <div class="summary-label">{% trans 'Files: ' %}</div>
-                    <div class="summary-value" data-bind="text: fileList().length + '{% trans " files uploaded" %}'"></div>
+        <div style="display: inline-flex;">
+            <div style="border: solid 1px #ddd">
+                <div class="iiif-leaflet" data-bind="leaflet: leafletConfig" style="height: 300px; width: 400px"></div>
+            </div>
+            <!-- ko foreach: {data:fileLists, as: 'fileList'} -->
+            <div style="width: 1000px; display: flex; flex-direction: column; padding-left: 30px">
+                <h5 class="summary-value" data-bind="text: digitalResourceName"></h5>
+                <table data-bind="datatable: tableConfig" class="table table-striped table-bordered" width="100%">
+                    <thead>
+                        <tr>
+                            <th>{% trans "File Name:" %}</th>
+                            <th>{% trans "Interpretation" %}</th>
+                            <th>{% trans "File Parameters" %}</th>
+                        </tr>
+                    </thead>
+                    <tbody data-bind="foreach: {data: fileList, as: 'file'}">
+                        <tr>
+                            <td><div class="summary-value" data-bind="text: file.name"></div></td>
+                            <td><div class="summary-value" data-bind="text: file.interpretation"></div></td>
+                            <td><div class="summary-value" data-bind="text: file.parameter"></div></td>
+                        </tr>
+                    <tbody>
+                </table>
+                <div class="final-step-section-block-item">
+                    <div style="display: inline-flex;">
+                        <div class="summary-label">{% trans 'Files: ' %}</div>
+                        <div class="summary-value" data-bind="text: fileList().length + '{% trans " files uploaded" %}'"></div>
+                    </div>
                 </div>
             </div>
+            <!-- /ko -->
         </div>
     </div>
-    <!-- /ko -->
 </div>
 <!-- /ko -->
