--- a/afs/templates/views/components/workflows/upload-dataset/select-dataset-files-step.htm
+++ b/afs/templates/views/components/workflows/upload-dataset/select-dataset-files-step.htm
@@ -69,17 +69,18 @@
         </div>
     </div>
     <!--/ko-->
-        
+
     <div class="dropzone-photo-upload" data-bind="dropzone: dropzoneOptions">
-        <div class="file-workbench-buttons">
-            <button class="btn btn-primary btn-lg btn-block btn-labeled btn-workbench fa fa-upload upload-dataset-files dz-clickable" data-bind="css: uniqueidClass">
-                <span>{% trans "Add Files" %}</span>
-            </button>
+        <div class="file-workbench-links">
+            <a class="upload-dataset-files dz-clickable" data-bind="css: uniqueidClass">
+                <span>{% trans "Drag or " %}</span><span class="text-bold">{% trans "click here " %}</span><span>{% trans "to upload photos" %}</span>
+            </a>
         </div>
         <div style="min-height: 100%;">
             <div id="hidden-dz-previews" style="display:none"></div>
         </div>
     </div>
+
     <div>
 
     <div>
