Create sample & region names from user input, #580

--- a/afs/templates/views/components/workflows/sample-taking-workflow/sample-taking-sample-location-step.htm
+++ b/afs/templates/views/components/workflows/sample-taking-workflow/sample-taking-sample-location-step.htm
@@ -342,6 +342,7 @@
                                     visible: $data.partIdentifierAssignmentLabelWidget().visible
                                 '
                             ></div>
+                            <div data-bind="text: sampleName"></div>
                         <!-- /ko -->
 
                         <!-- BEGIN sample description -->
