--- a/afs/templates/views/components/workflows/sample-taking-workflow/sample-taking-sample-location-step.htm
+++ b/afs/templates/views/components/workflows/sample-taking-workflow/sample-taking-sample-location-step.htm
@@ -342,7 +342,9 @@
                                     visible: $data.partIdentifierAssignmentLabelWidget().visible
                                 '
                             ></div>
-                            <div data-bind="text: sampleName"></div>
+                            <div>
+                                <input disabled type="text" style="padding-left: 25px; margin-left: 5px; width: 342px; height: 36px;" data-bind="textInput: sampleName"></input>
+                            </div>
                         <!-- /ko -->
 
                         <!-- BEGIN sample description -->
