--- a/afs/templates/views/components/workflows/upload-dataset/select-dataset-files-step.htm
+++ b/afs/templates/views/components/workflows/upload-dataset/select-dataset-files-step.htm
@@ -46,7 +46,9 @@
                      <label class="control-label" style="padding-top: 5px;">{% trans "Files in Dataset" %}</label>
                     <div class="file-workbench-files" data-bind="foreach: {data: part.datasetFiles, as: 'file'}">
                         <div class='file-workbench-file' data-bind="click: function(){ !file.tileId() ? self.removeFileFromPart(file): '' }, css: {staged: false}">
-                            <i class="fa" style="color: green" data-bind="css: { 'fa-check': file.tileId(), 'fa-trash': !file.tileId() }"></i>
+                            <i class="fa" data-bind="
+                                css: { 'fa-check': file.tileId(), 'fa-trash': !file.tileId() },
+                                style: { color: file.tileId() ? 'green' : 'black' }"></i>
                             <span class='file-name manifest-manager-canvas-name' data-bind="text: file.name || file.upload?.filename"></span>
                         </div>
                     </div>
