Add phys thing name to area, #582

--- a/afs/templates/views/components/workflows/analysis-areas-workflow/analysis-areas-annotation-step.htm
+++ b/afs/templates/views/components/workflows/analysis-areas-workflow/analysis-areas-annotation-step.htm
@@ -175,6 +175,9 @@
                                     visible: $data.partIdentifierAssignmentLabelWidget().visible
                                 '
                             ></div>
+                            <div>
+                                <input disabled type="text" style="padding-left: 20px; margin-left: 5px; width: 342px; height: 36px;" data-bind="textInput: areaName"></input>
+                            </div>
                         <!-- /ko -->
 
                         <div data-bind="foreach: {
