Update area summary to show phys thing name, #582

--- a/afs/templates/views/components/annotation-summary.htm
+++ b/afs/templates/views/components/annotation-summary.htm
@@ -21,7 +21,7 @@
                         click: function() {
                             $parent.highlightAnnotation(part.tileId);
                         }">
-                        <td><div class="summary-value" data-bind="text: part.label"></div></td>
+                        <td><div class="summary-value" data-bind="text: part.name"></div></td>
                         <td><div class="summary-value" data-bind="text: part.annotator"></div></td>
                     </tr>
                 <tbody>
